--- a/style.css
+++ b/style.css
@@ -285,5 +285,10 @@ textarea, textarea:focus {
 }
 
 #title {
-  text-decoration: none
+  text-decoration: none;
+  color: tomato;
+}
+
+#title:hover {
+  color: skyblue
 }
